# cpp-client

./: .appveyor  .appveyor.yml  .clang-format  .codacy.yml  .codeclimate.yml  .codecov.yml  .editorconfig  .gitattributes  .gitignore  .gitmodules  .travis.yml  CHANGELOG.md  CMakeLists.txt  CMakeSettings.json  CODEOWNERS  LICENSE  README.md  asan_blacklist.txt  build.cmd  build.sh  keywords.txt  library.json  library.properties  platformio.ini  run_tests.cmd  run_tests.sh
.circleci/: clang_tidy.sh  config.yml  script_arduino.sh  script_desktop.sh  script_platform_io.sh
.github/workflows/: arduino.yml  asan.yml  codeclimate.yml  coverage.yml  test.yml
cmake/: External.cmake  GTest.cmake  toolchain.cmake
cmake/Hunter/: config.cmake
docs/: INSTALL_ARDUINO.md  INSTALL_OS.md  INSTALL_PLATFORMIO.md  cpp.md
examples/ESP32/: ESP32.ino
examples/ESP8266/: ESP8266.ino
examples/cmake_example/: .gitmodules  CMakeLists.txt  build.cmd  build.sh  main.cpp
examples/platformio_example/: platformio.ini
extras/: ARDUINO_IDE.sh
extras/cmake_example/: CMakeSettings.json
extras/docs/: cpp.md
include/stl/: array  cctype  cstddef  cstdint
src/: CMakeLists.txt  arkClient.h
src/api/: api.h  api_base.h  paths.cpp  paths.h  paths.hpp
src/api/blockchain/: blockchain.cpp  blockchain.hpp  blockchain_paths.hpp
src/api/blocks/: blocks.cpp  blocks.h  blocks.hpp  blocks_paths.hpp
src/api/bridgechains/: bridgechains.cpp
src/api/businesses/: businesses.cpp
src/api/delegates/: delegates.cpp  delegates.hpp  delegates_paths.hpp
src/api/entities/: entities.cpp  entities.hpp  entities_paths.hpp
src/api/locks/: locks.cpp  locks.h  locks.hpp  locks_paths.hpp
src/api/node/: node.cpp  node.hpp  node_paths.hpp
src/api/one/: one_api.h  one_paths.h
src/api/one/accounts/: one_accounts.cpp  one_accounts.h
src/api/one/blocks/: one_blocks.cpp  one_blocks.h
src/api/one/delegates/: one_delegates.cpp  one_delegates.h
src/api/one/loader/: one_loader.cpp  one_loader.h
src/api/one/peers/: one_peers.cpp  one_peers.h
src/api/one/signatures/: one_signatures.cpp  one_signatures.h
src/api/one/transactions/: one_transactions.cpp  one_transactions.h
src/api/peers/: peers.cpp  peers.h  peers.hpp  peers_paths.hpp
src/api/rounds/: rounds.cpp  rounds.hpp  rounds_paths.hpp
src/api/transactions/: transactions.cpp  transactions.h  transactions.hpp  transactions_paths.hpp
src/api/two/: two_api.h  two_paths.h
src/api/two/blocks/: two_blocks.cpp  two_blocks.h
src/api/two/delegates/: two_delegates.cpp  two_delegates.h
src/api/two/node/: two_node.cpp  two_node.h
src/api/two/peers/: two_peers.cpp  two_peers.h
src/api/two/transactions/: two_transactions.cpp  two_transactions.h
src/api/two/votes/: two_votes.cpp  two_votes.h
src/api/two/wallets/: two_wallets.cpp  two_wallets.h
src/api/votes/: votes.cpp  votes.h  votes.hpp  votes_paths.hpp
src/api/wallets/: wallets.cpp  wallets.hpp  wallets_paths.hpp
src/connection/: connection.h  connection_abstract.hpp
src/helpers/: client_helpers.h  helpers.h
src/host/: host.cpp
src/http/: http.cpp  http.h
src/http/iot/: http.cpp  http_impl.cpp  main.cpp
src/http/os/: http.cpp  http_impl.cpp
src/include/cpp-client/: arkClient.h
src/include/cpp-client/api/: abstract.h  api.h  api.hpp  api_base.h  api_base.hpp  api_handler.hpp  base.h  paths.h
src/include/cpp-client/api/blockchain/: blockchain.hpp
src/include/cpp-client/api/blocks/: blocks.h
src/include/cpp-client/api/bridgechains/: bridgechains.cpp  bridgechains.h
src/include/cpp-client/api/businesses/: businesses.h
src/include/cpp-client/api/delegates/: delegates.h
src/include/cpp-client/api/entities/: entities.h
src/include/cpp-client/api/locks/: locks.h
src/include/cpp-client/api/node/: node.h
src/include/cpp-client/api/one/: one_api.h  one_paths.h
src/include/cpp-client/api/one/accounts/: one_accounts.h
src/include/cpp-client/api/one/blocks/: one_blocks.h
src/include/cpp-client/api/one/delegates/: one_delegates.h
src/include/cpp-client/api/one/loader/: one_loader.h
src/include/cpp-client/api/one/peers/: one_peers.h
src/include/cpp-client/api/one/signatures/: one_signatures.h
src/include/cpp-client/api/one/transactions/: one_transactions.h
src/include/cpp-client/api/peers/: peers.h
src/include/cpp-client/api/rounds/: rounds.h
src/include/cpp-client/api/transactions/: transactions.h
src/include/cpp-client/api/two/: two_api.h  two_paths.h
src/include/cpp-client/api/two/blocks/: two_blocks.h
src/include/cpp-client/api/two/delegates/: two_delegates.h
src/include/cpp-client/api/two/node/: two_node.h
src/include/cpp-client/api/two/peers/: two_peers.h
src/include/cpp-client/api/two/transactions/: two_transactions.h
src/include/cpp-client/api/two/votes/: two_votes.h
src/include/cpp-client/api/two/wallets/: two_wallets.h
src/include/cpp-client/api/votes/: votes.h
src/include/cpp-client/api/wallets/: wallets.h
src/include/cpp-client/connection/: connection.h  connection.hpp
src/include/cpp-client/host/: host.h
src/include/cpp-client/http/: http.h  http_support.hpp
src/lib/stl/: cassert  cctype  cstddef  cstdint  cstdio
src/stl/: array  cassert  cstdio  cstring  memory
src/stl/details/: to_string.h
test/: CMakeLists.txt  platformio.ini  rm_submodules.py
test/api/: blockchain.cpp  blocks.cpp  bridgechains.cpp  businesses.cpp  delegates.cpp  entities.cpp  locks.cpp  node.cpp  paths.cpp  peers.cpp  rounds.cpp  transactions.cpp  votes.cpp  wallets.cpp
test/api/one/: one_accounts.cpp  one_blocks.cpp  one_delegates.cpp  one_loader.cpp  one_peers.cpp  one_signatures.cpp  one_transactions.cpp
test/api/two/: two_blocks.cpp  two_delegates.cpp  two_node.cpp  two_peers.cpp  two_transactions.cpp  two_votes.cpp  two_wallets.cpp
test/connection/: connection.cpp
test/host/: host.cpp
test/http/: http.cpp
test/iot/: platform.hpp  test_main.cpp
test/iot/gtest/: gtest.h
test/mocks/: mock_api.h  mock_http.cpp  mock_http.h  mock_http.hpp
test/utils/: json.h
travis/: install_platform_io.sh  script_desktop.sh
(+11 files in other folders)
